examples/test/testpolicy13977.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13977
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key40: value12
      key32: value11
      key9: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value27
          key38: value3
          key46: value20
